--- a/example/src/index.html
+++ b/example/src/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>cheerio webpack plugin example</title>
-  <link rel="stylesheet" href="//example.com/debug.css">
+  <link class="debug" rel="stylesheet" href="//example.com/debug.css">
 </head>
 <body>
   <h1>cheerio webpack plugin example</h1>
   <div class="debug">
     <p>debug info...</p>
   </div>
-  <script type="text/javascript" src="//examdeple.com/debug.js"></script>
+  <script class="debug" type="text/javascript" src="//examdeple.com/debug.js"></script>
 </body>
 </html>
